fade in the moon phase to fix a flickering issue on initial page load

--- a/style.css
+++ b/style.css
@@ -20,4 +20,6 @@ body {
 
 .moon .full {
     mask-size: cover;
+    opacity: 0;
+    transition: opacity 2s;
 }
